@@ -7,6 +7,7 @@ version 0.84.05
 	--settings
 	K-1 bulb mode bugfix (testing)
 	--dangerous no longer required for K-70
+	bulb_mode setting reading for K-70, K-50
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
 	about/version code cleanup
